encoding/jsonschema/testdata/txtar/openapi_date-time.txtar
#version: openapi

-- schema.yaml --
components:
  schemas:
    DateTime:
        type: string
        format: date-time

-- out/decode/extract --
ERROR:
unknown format "date-time":
    schema.yaml:5:9
